cmake_minimum_required(VERSION 3.10)
SET(TYPE "server" CACHE STRING "server")
SET(TYPE "client" CACHE STRING "client")

if(TYPE STREQUAL "server")
    project(server)
    set(SOURCE_FILES Server/main.cpp)
    add_executable(server, ${SOURCE_FILES})
else(TYPE STREQUAL "client")
    project(client)
    set(SOURCE_FILES Client/main.cpp)
    add_executable(client, ${SOURCE_FILES})
else()
    message("You have to select TYPE: server or client!")
    EXIT()
endif()

set(CMAKE_CXX_COMPILER /usr/bin/g++)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2")
